hw6_lab10/tests/errors/sem_while_non_boolean.kt
// EXPECT: semantic error — while condition is not Boolean
fun main() {
    while ("keep going") {
        println("loop")
    }
}
